# WallPaper

./: CMakeLists.txt  README.md
include/: WallPaper.hpp
src/entry/: WallPaper.cpp  main.cpp
src/util/: Util.cpp
